      - Remove.
  * debian/patches/fix-ftbfs-sparc64.patch:
    + Fix FTBFS on sparc64 (Closes: #806816).
  * debian/patches/fix-commitsize.patch:
    + Make sure that commitSize is at least as big as the page size.
      This fixes crashes in JSC in ppc64el.
  * debian/rules:
    + Don't pass -DENABLE_YARR_JIT=0, passing -DENABLE_JIT=OFF already
      takes care of that.
  * debian/copyright:
    + Update copyright years.
    + Remove mentions to jquery (which is no longer included) and
      FontWithNoValidEncoding.fon, which is a regular font in the FON file
      format.

 -- Alberto Garcia <berto@igalia.com>  Wed, 02 Dec 2015 10:58:10 +0200

webkit2gtk (2.10.4+dfsg1-1) unstable; urgency=medium

  * New upstream release.
  * debian/patches/install-minibrowser.patch:
    + Refresh.
  * webkit2gtk includes a binary called WebKitPluginProcess2 that allows
    loading plugins that depend on GTK+2, like Adobe Flash or Google
    Hangouts. This however has the side effect of requiring GTK+2 and all
    its dependencies. We're moving the WebKitPluginProcess2 to a separate
    package so users that don't need any of those plugins don't need to
    install GTK+2 (Closes: #804412).
    + debian/control:
      - Add the entry for the new libwebkit2gtk-4.0-37-gtk2 package.
    + debian/rules:
      - Run dh_strip on the new package as well.
    + debian/patches/hide-gtk2-plugins.patch:
      - Hide plugins if the plugin process is not available.
    + debian/libwebkit2gtk-4.0-37-gtk2.install:
      - Install WebKitPluginProcess2.
    + debian/libwebkit2gtk-4.0-37.install:
      - Remove WebKitPluginProcess2.
    + debian/NEWS:
      - Add news item about the new package.

 -- Alberto Garcia <berto@igalia.com>  Thu, 12 Nov 2015 23:10:53 +0200

webkit2gtk (2.10.3+dfsg1-1) unstable; urgency=medium

  * New upstream release.
  * debian/rules:
    + The size of the webkit2gtk -dbg packages is huge and has been a