@@ -8,7 +8,6 @@ CPPFLAGS = $(shell dpkg-buildflags --get CPPFLAGS) -Wall
 CFLAGS = $(shell dpkg-buildflags --get CFLAGS)
 LDFLAGS = $(shell dpkg-buildflags --get LDFLAGS) -Wl,--as-needed
 
-EXTRA_DH_ARGUMENTS =
 EXTRA_CMAKE_ARGUMENTS =
 
 # Sacrifice speed in order to make it more likely resource limits
@@ -55,7 +54,7 @@ else
 endif
 
 %:
-	dh $@ --parallel $(EXTRA_DH_ARGUMENTS)
+	dh $@ --parallel
 
 override_dh_auto_configure:
 	CFLAGS="$(CFLAGS) $(CPPFLAGS)" \
@@ -71,21 +70,21 @@ override_dh_auto_configure:
 	   $(EXTRA_CMAKE_ARGUMENTS)
 
 override_dh_strip:
-	dh_strip -plibwebkit2gtk-4.0-37 --dbg-package=libwebkit2gtk-4.0-37-dbg $(EXTRA_DH_ARGUMENTS)
-	dh_strip -plibwebkit2gtk-4.0-37-gtk2 --dbg-package=libwebkit2gtk-4.0-37-dbg $(EXTRA_DH_ARGUMENTS)
-	dh_strip -plibjavascriptcoregtk-4.0-18 --dbg-package=libjavascriptcoregtk-4.0-18-dbg $(EXTRA_DH_ARGUMENTS)
-	dh_strip $(EXTRA_DH_ARGUMENTS)
+	dh_strip -plibwebkit2gtk-4.0-37 --dbg-package=libwebkit2gtk-4.0-37-dbg
+	dh_strip -plibwebkit2gtk-4.0-37-gtk2 --dbg-package=libwebkit2gtk-4.0-37-dbg
+	dh_strip -plibjavascriptcoregtk-4.0-18 --dbg-package=libjavascriptcoregtk-4.0-18-dbg
+	dh_strip
 
 override_dh_makeshlibs:
-	dh_makeshlibs -plibwebkit2gtk-4.0-37 -Xinjected-bundle $(EXTRA_DH_ARGUMENTS)
-	dh_makeshlibs -plibjavascriptcoregtk-4.0-18 $(EXTRA_DH_ARGUMENTS)
+	dh_makeshlibs -plibwebkit2gtk-4.0-37 -Xinjected-bundle
+	dh_makeshlibs -plibjavascriptcoregtk-4.0-18
 
 override_dh_shlibdeps:
-	dh_shlibdeps $(EXTRA_DH_ARGUMENTS)
-	dh_girepository $(EXTRA_DH_ARGUMENTS)
+	dh_shlibdeps
+	dh_girepository
 
 override_dh_builddeb:
 	DEB_BUILD_OPTIONS="$(filter-out parallel=%,$(DEB_BUILD_OPTIONS))" \
-		dh_builddeb $(EXTRA_DH_ARGUMENTS)
+		dh_builddeb
 
 override_dh_auto_test:
